added new coomponents multi-player-board and multi-player

--- a/styles/button.module.scss
+++ b/styles/button.module.scss
@@ -5,6 +5,7 @@
   background: $primary;
   color: $text-light;
   padding: 10px 24px;
+  margin-left: 20px;
   border-radius: $button-border-radius;
   cursor: pointer;
   text-transform: uppercase;
